mistake fixed and css aligned

--- a/task_6/css/styles.css
+++ b/task_6/css/styles.css
@@ -8,8 +8,8 @@
   background: #888;
 }
 
-.header ul{
-padding: 20 px 0;
+.header ul {
+  padding: 20 px 0;
 }
 
 .header li {
@@ -17,6 +17,7 @@ padding: 20 px 0;
   vertical-align: middle;
   margin: 0 10px;
 }
+
 .header li:last-child {
   pointer-events: none;
   text-indent: 10px;
@@ -34,11 +35,11 @@ padding: 20 px 0;
   border-bottom: 2px solid transparent;
 }
 
-.header li a:hover{
+.header li a:hover {
   color: yellow;
   text-decoration: underline;
   text-shadow: 10px 10px 1 px #000;
-  border-color: yellow
+  border-color: yellow;
   padding-bottom: 30px;
 }
 
